--- a/countdown/PenguinOneThemeController.xib
+++ b/countdown/PenguinOneThemeController.xib
@@ -45,7 +45,6 @@
 								<int key="NSvFlags">1316</int>
 								<string key="NSFrame">{{0, 43}, {320, 417}}</string>
 								<reference key="NSSuperview" ref="70517587"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="27322876"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -61,7 +60,6 @@
 								<object class="NSPSMatrix" key="NSFrameMatrix"/>
 								<string key="NSFrame">{{137, 100}, {109, 81}}</string>
 								<reference key="NSSuperview" ref="70517587"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="664225919"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -103,7 +101,6 @@
 								<object class="NSPSMatrix" key="NSFrameMatrix"/>
 								<string key="NSFrame">{{27, 230}, {38, 25}}</string>
 								<reference key="NSSuperview" ref="70517587"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="872044516"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -139,7 +136,6 @@
 								<object class="NSPSMatrix" key="NSFrameMatrix"/>
 								<string key="NSFrame">{{123, 267}, {34, 28}}</string>
 								<reference key="NSSuperview" ref="70517587"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="551664516"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -172,7 +168,6 @@
 								<object class="NSPSMatrix" key="NSFrameMatrix"/>
 								<string key="NSFrame">{{171, 333}, {38, 24}}</string>
 								<reference key="NSSuperview" ref="70517587"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="115302026"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -204,8 +199,6 @@
 								<int key="NSvFlags">1316</int>
 								<string key="NSFrame">{{165, 417}, {149, 21}}</string>
 								<reference key="NSSuperview" ref="70517587"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -233,7 +226,6 @@
 						<object class="NSPSMatrix" key="NSFrameMatrix"/>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="411161575"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">10</int>
@@ -296,7 +288,6 @@ AAgACAAIAAEAAQABAAE</bytes>
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="70517587"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -466,55 +457,7 @@ AAgACAAIAAEAAQABAAE</bytes>
 			<nil key="sourceID"/>
 			<int key="maxID">23</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">PenguinOneThemeController</string>
-					<string key="superclassName">TemplateThemeController</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="label_days">UILabel</string>
-						<string key="label_hours">UILabel</string>
-						<string key="label_mins">UILabel</string>
-						<string key="label_secs">UILabel</string>
-						<string key="timer_text">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="label_days">
-							<string key="name">label_days</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="label_hours">
-							<string key="name">label_hours</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="label_mins">
-							<string key="name">label_mins</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="label_secs">
-							<string key="name">label_secs</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="timer_text">
-							<string key="name">timer_text</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PenguinOneThemeController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">TemplateThemeController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/TemplateThemeController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
